--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon-32x32.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/monitor.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tejas_Portfolio</title>
   </head>
